--- a/public/assets/styles/estilos.css
+++ b/public/assets/styles/estilos.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
 
 
 
@@ -13,5 +24,107 @@
 /*Carrucel*/
 
 /*contacto*/
+
+.form{
+    background-color: #e8dddd;
+    margin: auto;
+    width: 90%;
+    max-width: 400px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+    padding: 2.5em 3em;
+    border-radius:  10px;
+    text-align: center;
+}
+.form_title{
+    font-size: 2em;
+    margin-bottom: .5em;
+}
+
+.form_paragraph{
+    font-weight: 300;
+}
+
+.form_container{
+   margin-top: 1em;
+   display: grid;
+   gap: .5em;
+}
+.form_group{
+    position: relative;
+    --color:#5757577e;
+}
+
+.form_input{
+    width: 100%;
+    background: none;
+    color: #706c6c;
+    font-size: 1rem;
+    padding: .6em .3em;
+    border: none;
+    outline: none;
+    border-bottom:  2px solid #5757577e;
+    font-family: 'Roboto', sans-serif;
+}
+
+.form_input:focus + .form_label,
+.form_input:not(:placeholder-shown) + .form_label{
+    transform: translateY(-12px) scale(.7);
+    transform-origin: left top;
+    color: #3866f2;
+}
+
+.form_label{
+    color: #5757577e;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 5px;
+    transform: translateY(10px);
+    transition: transform .5s, color .3s;
+}
+
+.form_submit {
+    margin-top: 25px;
+    width: 90%;
+    background:#3866f2;
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 1rem;
+    padding:  .8em 0;
+    border: none;
+    border-radius:  .5em;
+
+}
+.form_line{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #3866f2;
+    transform: scale(0);
+    transform: left bottom;
+    transition:  transform .4s;
+}
+
+.form_input:focus ~ .form_line,
+.form_input:not(:placeholder-shown) ~ .form_line{
+    transform: scale(1);
+
+}
+
+.form_input:focus,
+.form_input:not(:placeholder-shown) {
+    color: #4d4646;
+}
+@media (max-width: 425px) {
+
+    .form_title {
+        font-size: 1.8rem;
+    }
+}
+
+
 
 /*footer*/
