--- a/public/assets/styles/estilos.css
+++ b/public/assets/styles/estilos.css
@@ -15,7 +15,7 @@ body{
 /*Navbar*/
 .navbar {
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 0.5em;
   display: flex;
   align-items: flex; 
   position: fixed;
@@ -92,10 +92,11 @@ body{
 /*Cabecera*/
 section.Cabecera{
     margin: 0;
+    margin-bottom: 3.5em;
     position: relative;
     z-index: 1;
     padding: 0;
-    top:5em;
+    top:4.5em;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
