--- a/public/assets/styles/estilos.css
+++ b/public/assets/styles/estilos.css
@@ -10,6 +10,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+ 
 }
 
 /*Navbar*/
@@ -468,6 +469,9 @@ background-position: 0 0,24px 24px;
   padding: 20px;
   display: flex;
   justify-content: space-between;
+  align-items: center; 
+  width: 100%;
+
 }
 
 .footer .imgBanner {
@@ -485,7 +489,7 @@ background-position: 0 0,24px 24px;
 }
 
 .footer li {
-  display: inline;
+  display: inline-block;
   margin-right: 20px;
 }
 
@@ -513,4 +517,28 @@ background-position: 0 0,24px 24px;
 
 .footer li:not(:first-child) a:not(.active) {
   color: #74b3be;
+}
+
+
+/*chat gpt*/
+@media (max-width: 960px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+  }
+
+  .footer .imgBanner {
+    margin: 10px auto;
+  }
+
+  .footer ul {
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .footer li {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
